Fixed broken css selector for no-match elements in the node_search

--- a/meteor/client/ui/components/node_search/node_search.css
+++ b/meteor/client/ui/components/node_search/node_search.css
@@ -7,7 +7,7 @@
 
 }
 
-.node-search-noMatch {
+.node-search-no-match {
   color: #f00;
 }
 
